delete-switch-chain&&add-chain-config-api&&init-database
